--- a/src/ui/onboarding/OnboardingContainer.scss
+++ b/src/ui/onboarding/OnboardingContainer.scss
@@ -6,4 +6,5 @@
   right: 0;
   bottom: 0;
   pointer-events: none;
+  z-index: 1000;
 }
