--- a/src/ui/styles/global.scss
+++ b/src/ui/styles/global.scss
@@ -71,7 +71,7 @@ body {
   }
 
   .ReactModal__Overlay--after-open {
-    z-index: 999;
+    z-index: 100;
   }
 
   .mosaic.mosaic-theme {
